css overlapping fix

--- a/Struct/frontend/src/pages/TypeTest/TypeTest.css
+++ b/Struct/frontend/src/pages/TypeTest/TypeTest.css
@@ -5,6 +5,7 @@
   align-items: center; /* Center horizontally */
   height: 80vh; /* Full viewport height */
   width: 100%; /* Full width */
+  font-family: Poppins, sans-serif; /* Use Poppins font */
 }
 .type-test-navbar {
   display: flex;
